--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,21 @@ __pycache__/
 
 # C extensions
 *.so
+# CSV
+*.csv
+#Excel
+*.xls
+*.xlsx
+#ZIP
+*.zip
+#Gzip
+*.gzip
+#Feather
+*.feather
+*.geofeather
+#Parquet
+*.parquet
+*.geoparquet
 
 # Distribution / packaging
 .Python
@@ -25,6 +40,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+data/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
