--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+## Foundations of Spatial Data Science
+
+This repository contains practicals and notes from the _Foundations_ module. 
+
+You can find the original [here](https://jreades.github.io/fsds/)
